:lipstick: Finished designing the home page for the patient

--- a/WebApplicationFrontend/src/app/appointment/scheduling/scheduling.component.css
+++ b/WebApplicationFrontend/src/app/appointment/scheduling/scheduling.component.css
@@ -8,3 +8,9 @@ table {
     align-items: center;
     padding-top: 5vw;
 }
+
+.recommendation {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
