--- a/WebApplicationFrontend/src/app/home-page/home-page.component.html
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 
 <body>
     <h1>Welcome to Medbay Tech!</h1>
-    <div>
+    <div class="carousel">
         <carousel loop=true>
             <div class="carousel-cell">
                 <a>
@@ -76,7 +76,7 @@
         </mat-card>
     </div>
 
-    <button mat-raised-button routerLink="/scheduleAppointment">Schedule an Appointment</button>
+    <button mat-raised-button routerLink="/createFeedback">Leave a feedback</button>
 </body>
 <footer>
     <div class="container-fluid text-center text-md-left">
