--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.html
@@ -13,16 +13,10 @@
                 <h1><a class="naslov" routerLink="/home" class="navbar-brand">MEDBAY TECH</a></h1>  
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a routerLink="/medicalRecord"  class="nav-link">Medical record</a></li>
-                        <li class="nav-item"><a routerLink="/feedback"  class="nav-link">Feedback</a></li>        
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown">My account</a>
-                            <div class="dropdown-menu">
-                                <a routerLink="/medicalRecord" class="dropdown-item">Medical record</a>
-                                <div class="dropdown-divider"></div>
-                                <a href="#"class="dropdown-item">Log out</a>
-                            </div>
-                        </li>
+                        <li class="nav-item"><a routerLink="/scheduleAppointment"  class="nav-link">Schedule an appointment</a></li>
+                        <li class="nav-item"><a routerLink="/medicalRecord"  class="nav-link">Medical record</a></li>            
+                        <li class="nav-item"><a routerLink="/feedback"  class="nav-link">Feedback</a></li>
+                        <li class="nav-item"><a routerLink="."  class="nav-link">Log out</a></li>
                     </ul>
                 </div>
             </nav>
