--- a/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.css
+++ b/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.css
@@ -1,3 +1,39 @@
+.naslov {
+    /*font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;*/
+    font-size: larger;
+    color: white;
+}
+
+a.naslov:hover    {
+    text-decoration: none !important;
+    color: white;
+}
+
+
+.navbar-nav > li    {
+    padding-left: 4em;
+    padding-right: 4em;
+    /*padding-top: 1em;
+    padding-bottom: 1em;*/
+}
+
+html{
+    background-image: linear-gradient(69deg, rgba(63,81,181,1) 5%, rgba(197,202,233,1) 100%);
+    min-height: 100%;
+    margin: 0;
+
+}
+body{
+    background-image: linear-gradient(69deg, rgba(63,81,181,1) 5%, rgba(197,202,233,1) 100%);
+    min-height: 100%;
+    margin: 0;
+    background-attachment: fixed;
+    overflow: scroll;
+
+}
+
+
+
 .row {
     margin-bottom: 10px;
 }
