--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -11,6 +11,8 @@
     <button mat-raised-button routerLink="/observeAppointment">Observe </button>
     <button mat-raised-button routerLink="/scheduleAppointment">Schedule appointment</button>
     <button mat-raised-button routerLink="/appointmentRecommendation">Appointment recommendaion</button>  
+    <button mat-raised-button routerLink="/login">Login</button> 
+    <button mat-raised-button (click)="logout()">Logout</button>
     
 </div>
     <router-outlet></router-outlet>
