:lipstick: Added buttons for going from medical record to search pages and apppointment page, and a button for switching to a appointment recommendation

--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.css
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.css
@@ -1,5 +1,4 @@
 mat-card {
-    margin-left: 9vw;
     width: 55vw;
 }
 
@@ -44,4 +43,8 @@ th {
     top: 10px;
     left: 32vw;
     border: 3px solid black;
+}
+
+button {
+    margin-left: 10px;
 }
