--- a/MedbayTech.GraphicEditor/View/SearchAppointment.xaml
+++ b/MedbayTech.GraphicEditor/View/SearchAppointment.xaml
@@ -90,7 +90,7 @@
             <DataGrid DockPanel.Dock="Bottom" Name="dataGridAppointment" Margin="5,0,5,0" AutoGenerateColumns="False" IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Appointment type" Width="149" Binding="{Binding TypeOfAppointment}"/>
-                    <DataGridTextColumn Header="Doctor" Width="149" Binding="{Binding Doctor.Name}"/>
+                    <DataGridTextColumn Header="Doctor" Width="149" Binding="{Binding FullName}"/>
                     <DataGridTextColumn Header="Room" Width="149" Binding="{Binding Room.RoomLabel}"/>
                     <DataGridTextColumn Header="Beginning date" Width="149" Binding="{Binding Period.StartTime}"/>
                     <DataGridTextColumn Header="End date" Width="149" Binding="{Binding Period.EndTime}"/>
