:heavy_check_mark: Implemented patient blocking end to end test

--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -7,11 +7,11 @@
     <button mat-raised-button routerLink="/medicalRecord">Medical record</button>
     <button mat-raised-button routerLink="/prescriptionSimpleSearch">Prescription simple search</button>
     <button mat-raised-button routerLink="/reportSimpleSearch">Report simple search</button>
-    <button mat-raised-button routerLink="/blockMaliciousUsers">Block </button> 
+    <button name="block-malicious-users" mat-raised-button routerLink="/blockMaliciousUsers">Block </button> 
     <button mat-raised-button routerLink="/observeAppointment">Observe </button>
     <button mat-raised-button routerLink="/scheduleAppointment">Schedule appointment</button>
     <button mat-raised-button routerLink="/appointmentRecommendation">Appointment recommendaion</button>  
-    <button mat-raised-button routerLink="/login">Login</button> 
+    <button name="user-login" mat-raised-button routerLink="/login">Login</button> 
     <button mat-raised-button (click)="logout()">Logout</button>
     
 </div>
