--- a/WebApplicationFrontend/src/app/login/login/login.component.html
+++ b/WebApplicationFrontend/src/app/login/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="inputField">
             <mat-form-field appearance="fill" id="username-ff">
                 <mat-label>Username*</mat-label>
-                <input matInput id="username" placeholder="Username" formControlName="username">
+                <input matInput id="username" placeholder="Username" name="username-ff" formControlName="username">
                 <mat-error *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched && loginForm.get('username').errors['required']">Please enter username</mat-error>
             </mat-form-field>
         </div>
@@ -12,7 +12,7 @@
         <div class="inputField">
             <mat-form-field appearance="fill" id="password-ff">
                 <mat-label>Password*</mat-label>
-                <input matInput type="password" id="password" placeholder="Password" formControlName="password">
+                <input matInput type="password" id="password" placeholder="Password" name="password-ff" formControlName="password">
                 <mat-error *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched && loginForm.get('password').errors['required']">Please enter password</mat-error>
             </mat-form-field>
         </div>
@@ -21,7 +21,7 @@
             <label>Not registered yet?</label> 
             <a mat-button routerLink="/patientRegistration">Register now</a>
         </div>
-        <button mat-flat-button  style="float: right;" color="primary" type="submit" [disabled]="!loginForm.valid">Login</button>
+        <button mat-flat-button name="button-ff" style="float: right;" color="primary" type="submit" [disabled]="!loginForm.valid">Login</button>
     </div>
     </form>
 </div>
