--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-admin/navigation-bar-admin.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-admin/navigation-bar-admin.component.html
@@ -6,7 +6,8 @@
 
         <div class="container">
             <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #3F51B5">
-                <h1><a  routerLink="/allFeedback" class="navbar-brand">MEDBAY TECH</a></h1>
+                <h1><a routerLink="/home" class="navbar-brand"><img src="../../../assets/scan santa.png" width="35" height="35" class="d-inline-block align-top" alt="">
+                    MEDBAY TECH</a></h1>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a routerLink="/allFeedback"  class="nav-link">All feedbacks</a></li>           
