--- a/WebApplicationFrontend/src/app/login/login/login.component.css
+++ b/WebApplicationFrontend/src/app/login/login/login.component.css
@@ -14,6 +14,26 @@
     text-align: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); 
     font-size: 20px;
+}
+
+mat-card {
+    width: 30vw;
+    height: 20vw;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    padding-top: 5vw;
+}
+
+label {
+    margin-top: 10px;
+    font-size: medium;
+}
+a {
+    font-size: medium;
+    padding-left: 5px;
 }
