--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-patient/navigation-bar-patient.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-patient/navigation-bar-patient.component.html
@@ -9,12 +9,14 @@
 
         <div class="container">
             <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #3F51B5">
-                <h1><a routerLink="/home" class="navbar-brand">MEDBAY TECH</a></h1>
+                <h1><a routerLink="/home" class="navbar-brand"><img src="../../../assets/scan santa.png" width="35" height="35" class="d-inline-block align-top" alt="">
+                    MEDBAY TECH</a></h1>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a routerLink="/scheduleAppointment"  class="nav-link">Schedule an appointment</a></li>
                         <li class="nav-item"><a routerLink="/medicalRecord"  class="nav-link">Medical record</a></li>
                         <li class="nav-item"><a routerLink="/feedback"  class="nav-link">Feedback</a></li>
+                        <li class="nav-item"><a routerLink="/createFeedback" class="nav-link">Leave feedback</a></li>
                         <li class="nav-item"><a routerLink="/home" (click) = "logout()" class="nav-link">Log out</a></li>
                     </ul>
                 </div>
