--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-user/navigation-bar-user.component.css
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-user/navigation-bar-user.component.css
@@ -1,7 +1,7 @@
 .navbar-brand {
     font-size: 2.5vw;
-    color:white;
-    margin-top : 18px;
+    color: white;
+    padding-top: 18px;
 }
 
 a.naslov:hover    {
@@ -11,8 +11,18 @@ a.naslov:hover    {
 
 
 .navbar-nav > li    {
-    padding-left: 4em;
-    padding-right: 4em;
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+
+.navbar-nav > li > a {
+    color:white;
+    font-size: large;
+}
+
+.navbar-nav > li > a:hover {
+    color: #d9d9d9;
+    font-size: large;
 }
 
 .nav-link{
