--- a/WebApplicationFrontend/src/styles.css
+++ b/WebApplicationFrontend/src/styles.css
@@ -4,7 +4,7 @@
 html, body { height: 100%; }
 body {  margin: 0; 
         font-family: Roboto, "Helvetica Neue", sans-serif; 
-        background-image: linear-gradient(0deg, rgba(63,81,181,1) 5%, rgba(197,202,233,1) 100%);
+        background-image: linear-gradient(0deg, rgb(219, 219, 219) 5%, rgb(255, 255, 255) 100%);
         min-height: 100%;
         margin: 0;
         background-attachment: fixed;
