--- a/MedbayTech.GraphicEditor/View/MainPage.xaml
+++ b/MedbayTech.GraphicEditor/View/MainPage.xaml
@@ -1,17 +1,25 @@
-﻿<Page x:Class="GraphicEditor.MainPage"
+﻿<Page x:Class="MedbayTech.GraphicEditor.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GraphicEditor"
+      xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1024"
       Title="MainPage">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="68" VerticalAlignment="Top" Background="#006481" Grid.ColumnSpan="2">
-            <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
+
+        <DockPanel DockPanel.Dock="Top" Height="68" VerticalAlignment="Top" Background="#006481" Grid.ColumnSpan="2">
+            <Image DockPanel.Dock="Left" Name="imageLogo" Width="60" Margin="5,0,0,0" />
+            <Button DockPanel.Dock="Right" x:Name="buttonEmergencyAppointment" Content="Emergency appointment" Margin="5,5,5,5" Background="White" Width="180" FontWeight="Bold" FontSize="14" Click="ButtonEmergencyAppointment">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
             <Label Content="Hospital map" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="White"/>
-        </StackPanel>
+        </DockPanel>
         <DockPanel DockPanel.Dock="Left" Background="SteelBlue">
             <DockPanel DockPanel.Dock="Top">
                 <DockPanel DockPanel.Dock="Top">
@@ -40,6 +48,13 @@
 
             <DockPanel DockPanel.Dock="Bottom">
                 <DockPanel DockPanel.Dock="Bottom">
+                    <Button DockPanel.Dock="Top" Content="Equipment realocation" HorizontalAlignment="Right" Width="140" Height="30" Margin="5,5,5,5" Background="White" FontWeight="Bold" Click="ButtonEquipmentRealocation">
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
                     <Button DockPanel.Dock="Left" Content="Exit" HorizontalAlignment="Left" Width="120" Height="30" Margin="5,5,5,5" Background="White" FontWeight="Bold" Click="buttonExit">
                         <Button.Resources>
                             <Style TargetType="Border">
@@ -54,8 +69,9 @@
                             </Style>
                         </Button.Resources>
                     </Button>
+
                 </DockPanel>
-                <local:Legend DockPanel.Dock="Top" x:Name="legenda"  VerticalAlignment="Center" HorizontalAlignment="Center"   Visibility="Visible" Height="300" Width="250"></local:Legend>
+                <local:Legend DockPanel.Dock="Top" x:Name="legenda"  VerticalAlignment="Center" HorizontalAlignment="Center"   Visibility="Visible" Width="250"></local:Legend>
             </DockPanel>
             <TabControl SelectionChanged="TabControl_SelectionChanged" x:Name="tabControl">
                 <TabItem x:Name="MAP" Header="Map">
@@ -103,7 +119,7 @@
                             <ComboBoxItem Content="Cardiology"/>
                             <ComboBoxItem Content="Oncology"/>
                             <ComboBoxItem Content="Radiology"/>
-                            <ComboBoxItem Content="Neurology"/> 
+                            <ComboBoxItem Content="Neurology"/>
                             <ComboBoxItem Content="Intesive care"/>
                         </ComboBox>
                     </Grid>
