--- a/MedbayTech.GraphicEditor/App.xaml
+++ b/MedbayTech.GraphicEditor/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="GraphicEditor.App"
+﻿<Application x:Class="MedbayTech.GraphicEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GraphicEditor"
+             xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
