--- a/MedbayTech.GraphicEditor/FloorsMap.xaml
+++ b/MedbayTech.GraphicEditor/FloorsMap.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="GraphicEditor.FloorsMap"
+﻿<Window x:Class="MedbayTech.GraphicEditor.FloorsMap"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GraphicEditor"
+        xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
         mc:Ignorable="d"
         Title="FloorsMap" Height="450" Width="800">
     <StackPanel Orientation="Horizontal">
