--- a/MedbayTech.GraphicEditor/MainWindow.xaml
+++ b/MedbayTech.GraphicEditor/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="GraphicEditor.MainWindow"
+﻿<Window x:Class="MedbayTech.GraphicEditor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GraphicEditor"
+        xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
         mc:Ignorable="d"
         Title="Hospital map plan" Height="720" Width="1074" AllowsTransparency="True" WindowStyle="None" WindowStartupLocation="CenterScreen" BorderBrush="#FFC13939" ResizeMode="NoResize">
     <Window.Triggers>
