--- a/MedbayTech.GraphicEditor/View/AdditionalInformationAuxiliaryRoomEquipment.xaml
+++ b/MedbayTech.GraphicEditor/View/AdditionalInformationAuxiliaryRoomEquipment.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="GraphicEditor.View.AdditionalInformationAuxiliaryRoomEquipment"
+﻿<Page x:Class="MedbayTech.GraphicEditor.View.AdditionalInformationAuxiliaryRoomEquipment"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GraphicEditor.View"
+      xmlns:local="clr-namespace:MedbayTech.GraphicEditor.View"
       mc:Ignorable="d" 
       d:DesignHeight="175" d:DesignWidth="375"
       Title="AdditionalInformationAuxiliaryRoomEquipment">
