--- a/MedbayTech.GraphicEditor/View/HospitalMap.xaml
+++ b/MedbayTech.GraphicEditor/View/HospitalMap.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="GraphicEditor.HospitalMap"
+﻿<Page x:Class="MedbayTech.GraphicEditor.HospitalMap"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GraphicEditor"
+      xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
       mc:Ignorable="d" 
       d:DesignHeight="652" d:DesignWidth="766"
       Title="HospitalMap">
