--- a/MedbayTech.GraphicEditor/View/Legend.xaml
+++ b/MedbayTech.GraphicEditor/View/Legend.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="GraphicEditor.Legend"
+﻿<UserControl x:Class="MedbayTech.GraphicEditor.Legend"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GraphicEditor"
+             xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
              mc:Ignorable="d" d:DesignWidth="250" x:Name="legend" Height="250">
     <StackPanel VerticalAlignment="Center" Margin="0,0,-0.4,0">
         <Label DockPanel.Dock="Top" Content="Legend:" FontFamily="Arial" FontWeight="Bold" FontSize="25" Foreground="White" Height="39"/>
