--- a/MedbayTech.GraphicEditor/View/PopupPatientRoom.xaml
+++ b/MedbayTech.GraphicEditor/View/PopupPatientRoom.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="GraphicEditor.PopupPatientRoom"
+﻿<UserControl x:Class="MedbayTech.GraphicEditor.PopupPatientRoom"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GraphicEditor"
+             xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="1024">
     <Grid>
