--- a/MedbayTech.GraphicEditor/View/ScheduleEmergencyAppointment.xaml
+++ b/MedbayTech.GraphicEditor/View/ScheduleEmergencyAppointment.xaml
@@ -1,16 +1,16 @@
-﻿<Page x:Class="GraphicEditor.View.ScheduleEmergencyAppointment"
+﻿<Page x:Class="MedbayTech.GraphicEditor.View.ScheduleEmergencyAppointment"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GraphicEditor.View"
+      xmlns:local="clr-namespace:MedbayTech.GraphicEditor.View"
       mc:Ignorable="d" 
       d:DesignHeight="652" d:DesignWidth="702"
       Title="ScheduleEmergencyAppointment">
 
     <DockPanel>
         <DockPanel DockPanel.Dock="Top">
-            <Button DockPanel.Dock="Right" Margin="0,30,5,5" Content="Add new patient" Width="208" Height="25" FontSize="15" FontWeight="Bold" HorizontalAlignment="Right" Background="SteelBlue" Foreground="White" Click="ButtonAddNewPatient">
+            <Button DockPanel.Dock="Right" Margin="0,30,5,5" Content="Add new patient" Width="208" Height="25" FontSize="15" FontWeight="Bold" HorizontalAlignment="Right" Background="SteelBlue" Foreground="White" Click="ButtonAddNewPatient" IsEnabled="False">
                 <Button.Resources>
                     <Style TargetType="Border">
                         <Setter Property="CornerRadius" Value="10"/>
