--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
@@ -18,7 +18,7 @@
             <p class="content-paragraph">Insurance policy provider : <strong>{{ medicalRecord.insurancePolicyCompany }}</strong></p>
             <p class="content-paragraph">Patient condition : <strong>{{medicalRecord.patientCondition }}</strong></p>
 
-            <button mat-raised-button routerLink="/observeAppointment">Apppointments</button>
+            <button mat-raised-button routerLink="/observeAppointment" name="observe-appointment">Apppointments</button>
             <button mat-raised-button routerLink="/prescriptionSimpleSearch">Search prescriptions</button>
             <button mat-raised-button routerLink="/reportSimpleSearch">Search reports</button>
         </mat-card-content>
