--- a/WebApplicationFrontend/src/app/home-page/home-page.component.css
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.css
@@ -36,3 +36,16 @@ footer {
     background-color: #3F51B5;
     color:white;
 }
+
+.carousel {
+    width: 75%;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+p {
+    padding-top: 10px;
+}
