--- a/WebApplicationFrontend/src/app/home-page/home-page.component.html
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.html
@@ -2,29 +2,14 @@
 
 <body>
     <h1>Welcome to Medbay Tech!</h1>
+<div class="container">
     <div class="carousel">
-        <carousel loop=true>
-            <div class="carousel-cell">
-                <a>
-                    <img src="https://dcassetcdn.com/design_img/3594580/46294/46294_19908671_3594580_45125608_image.jpg"
-                    width="150" height="70">
-                 </a>
-            </div>
-            <div class="carousel-cell">
-                <a>
-                    <img src="https://dcassetcdn.com/design_img/3594580/46294/46294_19908671_3594580_45125608_image.jpg"
-                    width="150" height="70">
-                 </a>
-            </div>
-            <div class="carousel-cell">
-                <a>
-                    <img src="https://dcassetcdn.com/design_img/3594580/46294/46294_19908671_3594580_45125608_image.jpg"
-                    width="150" height="70">
-                 </a>
-            </div>
-        </carousel>
+        <ng-image-slider [images]="imageObject" #nav
+        [imageSize]="{width: '75%', height: 300}"
+        ></ng-image-slider>
     </div>
-
+</div> 
+<div class="container">
     <div class="cards">
         <mat-card class="card">
             <mat-card-header>
@@ -75,7 +60,7 @@
             </mat-card-content>
         </mat-card>
     </div>
-    
+</div>
 </body>
 <footer>
     <div class="container-fluid text-center text-md-left">
