:white_check_mark: Implemented Post Feedback E2E test

--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-patient/navigation-bar-patient.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-patient/navigation-bar-patient.component.html
@@ -16,7 +16,7 @@
                         <li class="nav-item"><a routerLink="/scheduleAppointment"  class="nav-link">Schedule an appointment</a></li>
                         <li class="nav-item"><a routerLink="/medicalRecord"  class="nav-link" name = "medical-record">Medical record</a></li>
                         <li class="nav-item"><a routerLink="/feedback"  class="nav-link">Feedback</a></li>
-                        <li class="nav-item"><a routerLink="/createFeedback" class="nav-link">Leave feedback</a></li>
+                        <li class="nav-item"><a routerLink="/createFeedback" class="nav-link" name = "create-feedback">Leave feedback</a></li>
                         <li class="nav-item"><a routerLink="/home" (click) = "logout()" class="nav-link">Log out</a></li>
                     </ul>
                 </div>
