:construction: Patient registration microservice

--- a/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row" *ngFor="let feedback of approvedFeedback" class="container center-card">
+    <div id="approvedFeedbackDiv" class="row" *ngFor="let feedback of approvedFeedback" class="container center-card">
                     <mat-card>
                         <mat-card-header>
                         <mat-card-title>
@@ -22,8 +22,5 @@
                         
                        
                     </mat-card>
-                
-                    
     </div>
-    
 </div>
