:sparkles: Feature web ready for pull request (#96)
* :construction: Added microservices

* :construction: Updated microservices

* :constuction: Created value objects in users micro service

* :construction: Users microservice

* :construction: Added value objects for user microservice

* :construction: Added Application, Controller, Infrastructure and Exceptions for MedbayTech.Appointment

* :construction: Patient service

* :construction: Fixed borked project reference

* :construction: Tried to add migrations to repository of patient documents microservice

* :construction: User microservice

* :construction: Changed DbContext

* :hammer: Rooms microservice partly implemented

* :hammer: Rooms microservice implemented partly

* :construction: User microservice refactor

* :construction: :hammer: Replaced Backend project

* :construction: Implemented block malicious user

* :construction: Added seeders for Patient Documets

* :construction: Implemented medical record controller

* :construction: Started examination and prescription repository

* :construction: Started implementing report service and repository

* :construction: Added configurations for reports

* :construction: Implemented prescription service and repository

* :construction: Implemented Patient Document microservice

* :construction: Implemented Appointment service

* :construction: Implementing rooms microservice

* :hammer: Doctor repository refactored

* :construction: Added doctor controller

* :construction: Implementing gateway for room microservice

* :construction: Finished appointment service and controller

* :construction: Fixed ocelot in API gateways

* :construction: Fixed configurations for room microservice

* :construction: Replaced frontend project

* :wrench: Fixed environments

* :construction: Added mappers for doctors

* :construction: Fixed namespace for User microservice

* :construction: Implementing co

--- a/WebApplicationFrontend/src/app/home-page/home-page.component.css
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.css
@@ -1,3 +1,8 @@
+h1 {
+    display: flex;
+    justify-content: center;
+}
+
 button {
     margin-left: 80vw;
     margin-top: 15px;
@@ -32,3 +37,15 @@ footer {
     color:white;
 }
 
+.carousel {
+    width: 75%;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+p {
+    padding-top: 10px;
+}
