--- a/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
+++ b/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
@@ -30,8 +30,11 @@
                 <p class="content-paragraph">Status : <strong>Finished</strong></p>
                 <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
             </mat-card-content>
+
             <mat-card-actions>
-                    <button mat-raised-button color="accent" class="button1" (click)="saveAppointment(appointment)" routerLink="/survey" target="_blank" >Survey</button>
+                <button mat-raised-button color="primary" class="button2" (click)="dialog.openDialog()" >Prescriptions</button>
+                
+                <button mat-raised-button color="accent" class="button1" (click)="saveAppointment(appointment)" routerLink="/survey" target="_blank" >Survey</button>
             </mat-card-actions>
         </mat-card>
     </div>
