--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-user/navigation-bar-user.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-user/navigation-bar-user.component.html
@@ -6,7 +6,7 @@
 
         <div class="container">
             <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #3F51B5">
-                <h1><a routerLink="#" class="navbar-brand"><img src="../../../assets/scan santa.png" width="35" height="35" class="d-inline-block align-top" alt="">
+                <h1><a routerLink="/" class="navbar-brand"><img src="../../../assets/scan santa.png" width="35" height="35" class="d-inline-block align-top" alt="">
                     MEDBAY TECH</a></h1>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
