:construction: Implemented frontend and backend for getting report for appointment

--- a/WebApplicationFrontend/src/app/prescription/observe-prescription/observe-prescription-dialog.component.html
+++ b/WebApplicationFrontend/src/app/prescription/observe-prescription/observe-prescription-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Dialog with elements</h1>
-<div mat-dialog-content #contentToConvert><span>This dialog showcases the <b>title, close, content</b> and actions elements. }</span></div>
+<div mat-dialog-content #contentToConvert><span>This dialog showcases the <b>title, close, content</b> and actions elements. </span></div>
 <div mat-dialog-actions>
   <button mat-raised-button mat-dialog-close>Close</button>
   <button mat-raised-button (click)="generatePdf(contentToConvert)">Convert to PDF</button>
