--- a/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
+++ b/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
@@ -1,5 +1,5 @@
 <div class="mat-card-cvr">
-    <h1>{{report.doctorId}}</h1>
+    
 <div class = "container">
     <div [dataSource]="allCancelableAppointments" class="row1" id ="cancel-appointment" *ngFor="let appointment of allCancelableAppointments">
         <mat-card class="card">
@@ -33,8 +33,8 @@
             </mat-card-content>
 
             <mat-card-actions>
-                <button mat-raised-button color="primary" class="button2" (click)="test(appointment.start,appointment.doctorId)" >Prescriptions</button>
-                
+                <button mat-raised-button color="primary" class="button2" (click)="otherMethod(appointment.start,appointment.doctorId)" >Report</button>
+                <button mat-raised-button color="primary" class="button2"  >Prescriptions</button>
                 <button mat-raised-button color="accent" class="button1" (click)="saveAppointment(appointment)" routerLink="/survey" target="_blank" >Survey</button>
             </mat-card-actions>
         </mat-card>
