--- a/MedbayTech.GraphicEditor/View/AdditionalInformationAuxiliaryRoom.xaml
+++ b/MedbayTech.GraphicEditor/View/AdditionalInformationAuxiliaryRoom.xaml
@@ -5,12 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
         mc:Ignorable="d"
-        Title="AdditionalInformationAuxiliaryRoom" Height="450" Width="500" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen" BorderBrush="Black" WindowStyle="None">
+        Title="AdditionalInformationAuxiliaryRoom" Height="450" Width="548" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen" BorderBrush="Black" WindowStyle="None">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="40" VerticalAlignment="Top" Background="#006481">
-            <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
-            <Label Content="Additiondal information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="25" Foreground="White" Width="327" Height="40"/>
-        </StackPanel>
+        <DockPanel DockPanel.Dock="Top" Background="#006481">
+            <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" Height="40" VerticalAlignment="Top">
+                <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
+                <Label Content="Additional information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="24" Foreground="White" Width="327" Height="40"/>
+            </StackPanel>
+            <Button Name="buttonRenovation" Content="Schedule renovation" HorizontalAlignment="Left" Height="30" Width="145" Margin="5,5,5,5" VerticalAlignment="Top" Foreground="Black" Background="White" FontWeight="Bold" FontSize="14" Click="ButtonScheduleRenovation">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </DockPanel>
         <DockPanel DockPanel.Dock="Bottom">
             <Button DockPanel.Dock="Left" x:Name="buttonSave" Content="Save" HorizontalAlignment="Left" Height="30" Margin="5,5,5,5" VerticalAlignment="Top" Width="130" Foreground="White" Background="#2B78E4" Click="Save_Click" FontSize="20">
                 <Button.Resources>
@@ -28,16 +37,38 @@
             </Button>
         </DockPanel>
         <DockPanel>
-            <Grid DockPanel.Dock="Top">
-                <Label Content="Room label" HorizontalAlignment="Left" Margin="143,39,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-                <Label Content="Room use" HorizontalAlignment="Left" Margin="147,69,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-                <Label Content="Ward" HorizontalAlignment="Left" Margin="149,101,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-                <TextBox HorizontalAlignment="Left" Height="22" Margin="256,45,0,0" TextWrapping="Wrap" Text="{Binding RoomLabel, Mode=TwoWay}" VerticalAlignment="Top" Width="150"/>
-                <TextBox HorizontalAlignment="Left" Height="24" Margin="256,75,0,0" TextWrapping="Wrap" Text="{Binding RoomUse, Mode=TwoWay}" VerticalAlignment="Top" Width="150"/>
-                <TextBox HorizontalAlignment="Left" Height="24" Margin="256,107,0,0" TextWrapping="Wrap" Text="{Binding Department.Name, Mode=TwoWay}" IsReadOnly="True" VerticalAlignment="Top" Width="150"/>
-            </Grid>
-            <Frame DockPanel.Dock="Bottom" Name="frameDataGrid" NavigationUIVisibility="Hidden"/>
+            <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Center">
+                <StackPanel DockPanel.Dock="Left" >
+                    <Label Content="Room label:" FontSize="16" Margin="5,5,5,5" FontWeight="SemiBold" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="Room use:" FontSize="16"  Margin="5,0,5,5" FontWeight="SemiBold" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="Ward:" FontSize="16"  Margin="5,0,5,5" FontWeight="SemiBold" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </StackPanel>
+                <StackPanel DockPanel.Dock="Right">
+                    <TextBox HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Margin="5,5,5,5" Text="{Binding RoomLabel, Mode=TwoWay}" Width="193"/>
+                    <TextBox HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Margin="5,0,5,5" Text="{Binding RoomUse, Mode=TwoWay}" Width="193"/>
+                    <TextBox HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Margin="5,0,5,5" Text="{Binding Department.Name, Mode=TwoWay}" IsReadOnly="True" Width="193"/>
+                </StackPanel>
+            </DockPanel>
+            <DockPanel DockPanel.Dock="Bottom">
+                <DockPanel DockPanel.Dock="Left">
+                    <Frame DockPanel.Dock="Top" Width="274" Name="frameDataGrid" Margin="5,5,5,5" NavigationUIVisibility="Hidden"/>
+                </DockPanel>
+                <DockPanel DockPanel.Dock="Right">
+                    <Button DockPanel.Dock="Bottom" x:Name="buttonCancelRealocation" Content="Cancel appointment" Margin="5,0,5,5" Foreground="White" Background="#006481" FontSize="20" Width="200" Click="ButtonCancelAppointmentRealocation">
+                        <Button.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <DataGrid Name="dataGridAppointmentRealocation" DockPanel.Dock="Top" Margin="5,5,5,5" IsReadOnly="True" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn  Header="Star" Width="115" Binding="{Binding Start }" />
+                            <DataGridTextColumn Header="End" Width="115" Binding="{Binding End}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </DockPanel>
+            </DockPanel>
         </DockPanel>
-        
     </DockPanel>
 </Window>
