--- a/MedbayTech.GraphicEditor/View/AdditionalInformationExaminationRoom.xaml
+++ b/MedbayTech.GraphicEditor/View/AdditionalInformationExaminationRoom.xaml
@@ -5,12 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
         mc:Ignorable="d"
-        Title="AdditionalInformationExaminationRoom" Height="450" Width="500" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen" BorderBrush="Black" WindowStyle="None">
+        Title="AdditionalInformationExaminationRoom" Height="483" Width="550" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen" BorderBrush="Black" WindowStyle="None">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="40" VerticalAlignment="Top" Background="#006481">
-            <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
-            <Label Content="Additional information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="25" Foreground="White" Width="327" Height="40"/>
-        </StackPanel>
+        <DockPanel DockPanel.Dock="Top" Background="#006481">
+            <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" Height="40" VerticalAlignment="Top">
+                <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
+                <Label Content="Additional information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="24" Foreground="White" Width="327" Height="40"/>
+            </StackPanel>
+            <Button Name="buttonRenovation" Content="Schedule renovation" HorizontalAlignment="Left" Height="30" Width="145" Margin="5,5,5,5" VerticalAlignment="Top" Foreground="Black" Background="White" FontWeight="Bold" FontSize="14" Click="ButtonScheduleRenovation">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </DockPanel>
         <DockPanel DockPanel.Dock="Bottom">
             <Button DockPanel.Dock="Left" x:Name="buttonSave" Content="Save" HorizontalAlignment="Left" Height="30" Margin="5,5,5,5" VerticalAlignment="Top" Width="130" Foreground="White" Background="#2B78E4" Click="Save_Click" FontSize="20">
                 <Button.Resources>
@@ -27,25 +36,43 @@
                 </Button.Resources>
             </Button>
         </DockPanel>
-        <Grid>
-            <Label Content="Room label" HorizontalAlignment="Left" Margin="124,45,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <Label Content="Room use" HorizontalAlignment="Left" Margin="128,75,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <Label Content="Ward" HorizontalAlignment="Left" Margin="145,107,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <Label Content="Doctor" HorizontalAlignment="Left" Margin="140,139,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <TextBox HorizontalAlignment="Left" Height="22" Margin="252,51,0,0" TextWrapping="Wrap" Text="{Binding RoomLabel}" VerticalAlignment="Top" Width="150"/>
-            <TextBox HorizontalAlignment="Left" Height="24" Margin="252,81,0,0" TextWrapping="Wrap" Text="{Binding RoomUse}" VerticalAlignment="Top" Width="150"/>
-            <TextBox HorizontalAlignment="Left" Height="24" Margin="252,113,0,0" TextWrapping="Wrap" Text="{Binding Department.Name}" VerticalAlignment="Top" Width="150"/>
-            <TextBox Name="textBoxDoctor" HorizontalAlignment="Left" Height="24" Margin="252,145,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
-
-            <DataGrid Name="dataGridAppointments" AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Top" Width="370" Height="175" Margin="70,179,54,0" RenderTransformOrigin="1.059,-0.838" IsReadOnly="True">
+        <Grid Height="401">
+            <Label Content="Room label" HorizontalAlignment="Left" Margin="84,12,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="35" Width="136"/>
+            <Label Content="Room use" HorizontalAlignment="Left" Margin="88,47,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="35" Width="121"/>
+            <Label Content="Ward" HorizontalAlignment="Left" Margin="104,82,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="36" Width="71"/>
+            <Label Content="Doctor" HorizontalAlignment="Left" Margin="96,118,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="36" Width="88"/>
+            <TextBox HorizontalAlignment="Left" Height="25" Margin="260,15,0,0" TextWrapping="Wrap" Text="{Binding RoomLabel}" VerticalAlignment="Top" Width="220"/>
+            <TextBox HorizontalAlignment="Left" Height="26" Margin="260,49,0,0" TextWrapping="Wrap" Text="{Binding RoomUse}" VerticalAlignment="Top" Width="220"/>
+            <TextBox HorizontalAlignment="Left" Height="27" Margin="260,85,0,0" TextWrapping="Wrap" Text="{Binding Department.Name}" VerticalAlignment="Top" Width="220"/>
+            <TextBox Name="textBoxDoctor" HorizontalAlignment="Left" Height="27" Margin="260,120,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="220"/>
+            <DataGrid Name="dataGridAppointments" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Top" Width="290" Height="181" Margin="10,154,0,0" RenderTransformOrigin="1.059,-0.838" IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="ID" Width="74" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="ID" Width="65" Binding="{Binding Id}"/>
                     <DataGridTextColumn Header="Doctor" Width="74" Binding="{Binding Doctor.Name}"/>
-                    <DataGridTextColumn Header="Start time" Width="74" Binding="{Binding Start}"/>
-                    <DataGridTextColumn Header="End time" Width="74" Binding="{Binding End}"/>
-                    <DataGridTextColumn Header="Finished" Width="74" Binding="{Binding Finished}"/>
+                    <DataGridTextColumn Header="Start time" Width="74" Binding="{Binding Period.StartTime}"/>
+                    <DataGridTextColumn Header="End time" Width="74" Binding="{Binding Period.EndTime}"/>
                 </DataGrid.Columns>
             </DataGrid>
+            <DataGrid Name="dataGridAppointmentsRealocation" AutoGenerateColumns="False" HorizontalAlignment="Right" VerticalAlignment="Top" Width="231" Height="181" Margin="0,154,10,0" RenderTransformOrigin="1.059,-0.838" IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn  Header="Star" Width="115" Binding="{Binding Start }" />
+                    <DataGridTextColumn Header="End" Width="115" Binding="{Binding End}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <Button x:Name="buttonCancelRealocation" Content="Cancel realocation" Foreground="White" Background="#006481" Width="200" FontSize="20" Margin="309,340,10,31" Click="ButtonCancelRealocation">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button x:Name="buttonCancelAppointment" Content="Cancel examination" Foreground="White" Background="#006481" FontSize="20" Margin="60,340,275,31" Click="ButtonCancelExamination">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
     </DockPanel>
 </Window>
