--- a/MedbayTech.GraphicEditor/View/AdditionalInformationOperatingRoom.xaml
+++ b/MedbayTech.GraphicEditor/View/AdditionalInformationOperatingRoom.xaml
@@ -5,12 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedbayTech.GraphicEditor"
         mc:Ignorable="d"
-        Title="AdditionalInformationOperaingRoom" Height="490" Width="500" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen" BorderBrush="Black" WindowStyle="None">
+        Title="AdditionalInformationOperaingRoom" Height="490" Width="555" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen" BorderBrush="Black" WindowStyle="None">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="40" VerticalAlignment="Top" Background="#006481">
-            <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
-            <Label Content="Additiondal information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="25" Foreground="White" Width="327" Height="40"/>
-        </StackPanel>
+        <DockPanel DockPanel.Dock="Top" Background="#006481">
+            <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" Height="40" VerticalAlignment="Top">
+                <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
+                <Label Content="Additional information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="24" Foreground="White" Width="327" Height="40"/>
+            </StackPanel>
+            <Button Name="buttonRenovation" Content="Schedule renovation" HorizontalAlignment="Left" Height="30" Width="145" Margin="5,5,5,5" VerticalAlignment="Top" Foreground="Black" Background="White" FontWeight="Bold" FontSize="14">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </DockPanel>
         <DockPanel DockPanel.Dock="Bottom">
             <Button DockPanel.Dock="Left" x:Name="buttonSave" Content="Save" HorizontalAlignment="Left" Height="30" Margin="5,5,5,5" VerticalAlignment="Top" Width="130" Foreground="White" Background="#2B78E4" Click="Save_Click" FontSize="20">
                 <Button.Resources>
@@ -27,21 +36,57 @@
                 </Button.Resources>
             </Button>
         </DockPanel>
-        <Grid>
-            <Label Content="Room label" HorizontalAlignment="Left" Margin="107,45,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <Label Content="Floor" HorizontalAlignment="Left" Margin="128,77,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <Label Content="Ward" HorizontalAlignment="Left" Margin="128,110,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <Label Content="Room use" HorizontalAlignment="Left" Margin="113,142,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-            <Label Content="Available appointments:" HorizontalAlignment="Left" Margin="66,174,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32" RenderTransformOrigin="0.487,0.623" Width="188"/>
-            <Label Content="Scheduled appointments:" HorizontalAlignment="Left" Margin="254,174,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32" Width="195"/>
-            <TextBox HorizontalAlignment="Left" Height="22" Margin="262,51,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding RoomLabel, Mode=TwoWay}"/>
-            <TextBox HorizontalAlignment="Left" Height="24" Margin="262,81,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding Department.Floor, Mode=TwoWay}"/>
-            <TextBox HorizontalAlignment="Left" Height="24" Margin="262,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding RoomUse, Mode=TwoWay}"/>
-            <TextBox HorizontalAlignment="Left" Height="22" Margin="262,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding Department.Name, Mode=TwoWay}"/>
-            <ListBox HorizontalAlignment="Left" Height="120" Margin="93,211,0,0" VerticalAlignment="Top" Width="140"/>
-            <ListBox HorizontalAlignment="Left" Height="120" Margin="271,211,0,0" VerticalAlignment="Top" Width="140"/>
-            <Button Content="Schedule" HorizontalAlignment="Left" Height="30" Margin="113,335,0,0" VerticalAlignment="Top" Width="99" Foreground="White" Background="RoyalBlue" FontSize="20" />
-            <Button Content="Cancel" HorizontalAlignment="Left" Height="30" Margin="308,335,0,0" VerticalAlignment="Top" Width="76" Foreground="White" Background="Tomato" FontSize="20" />
-        </Grid>
+        <DockPanel>
+            <DockPanel>
+                <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Center">
+                    <StackPanel DockPanel.Dock="Left" >
+                        <Label Content="Room label:" Margin="5,5,5,5" FontWeight="SemiBold" Height="30" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Label Content="Floor:" Margin="5,0,5,5" FontWeight="SemiBold" Height="30" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Label Content="Ward:" Margin="5,0,5,5" FontWeight="SemiBold" Height="30" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Label Content="Room use:" Margin="5,0,5,5" FontWeight="SemiBold" Height="30" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel DockPanel.Dock="Right">
+                        <TextBox TextWrapping="Wrap" Width="200" Height="30" Margin="5,5,5,5" Text="{Binding RoomLabel, Mode=TwoWay}"/>
+                        <TextBox TextWrapping="Wrap" Width="200" Height="30" Margin="5,0,5,5" Text="{Binding Department.Floor, Mode=TwoWay}"/>
+                        <TextBox TextWrapping="Wrap" Width="200" Height="30" Margin="5,0,5,5" Text="{Binding RoomUse, Mode=TwoWay}"/>
+                        <TextBox TextWrapping="Wrap" Width="200" Height="30" Margin="5,0,5,5" Text="{Binding Department.Name, Mode=TwoWay}"/>
+                    </StackPanel>
+                </DockPanel>
+                <DockPanel DockPanel.Dock="Bottom">
+                    <DockPanel DockPanel.Dock="Left">
+                        <Button DockPanel.Dock="Bottom" x:Name="buttonCancelAppointment" Content="Cancel operation" Margin="5,0,5,5" Foreground="White" Background="#006481" FontSize="20" Width="170" Click="ButtonCancelOperation">
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="10"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+                        <DataGrid Name="dataGridAppointments" DockPanel.Dock="Top" Margin="5,5,0,5" IsReadOnly="True" AutoGenerateColumns="False">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="ID" Width="65" Binding="{Binding Id}"/>
+                                <DataGridTextColumn Header="Doctor" Width="74" Binding="{Binding Doctor.Name}"/>
+                                <DataGridTextColumn Header="Start time" Width="74" Binding="{Binding Perid.Start}"/>
+                                <DataGridTextColumn Header="End time" Width="74" Binding="{Binding Period.End}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </DockPanel>
+                    <DockPanel DockPanel.Dock="Right">
+                        <Button DockPanel.Dock="Bottom" x:Name="buttonCancelRealocation" Content="Cancel realocation" Margin="5,0,5,5" Foreground="White" Background="#006481" FontSize="20" Width="180" Click="ButtonCancelRealocation">
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="10"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+                        <DataGrid Name="dataGridAppointmentRealocation" DockPanel.Dock="Top" Margin="5,5,5,5" IsReadOnly="True">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn  Header="Star" Width="115" Binding="{Binding Start }" />
+                                <DataGridTextColumn Header="End" Width="115" Binding="{Binding End}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </DockPanel>
+                </DockPanel>
+            </DockPanel>
+        </DockPanel>
     </DockPanel>
 </Window>
