--- a/MedbayTech.GraphicEditor/View/PopupExaminationRoom.xaml
+++ b/MedbayTech.GraphicEditor/View/PopupExaminationRoom.xaml
@@ -38,9 +38,9 @@
                    Panel.ZIndex="1"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center" Height="65" Width="175">
-            <Run BaselineAlignment="Bottom" Text="Exam room label/id:" Foreground="White" FontWeight="DemiBold"/>
+            <Run BaselineAlignment="Bottom" Text="Room label:" Foreground="White" FontWeight="DemiBold"/>
             <InlineUIContainer BaselineAlignment="Bottom">
-                <TextBox Height="18" TextWrapping="Wrap" Text="{Binding Path=ExaminationRoomId}" Width="61" TextAlignment="Center" FontSize="11" FontWeight="DemiBold"/>
+                <TextBox Height="18" TextWrapping="Wrap" Text="{Binding Path=ExaminationRoom.RoomLabel}" Width="100" TextAlignment="Center" FontSize="11" FontWeight="DemiBold"/>
             </InlineUIContainer>
             <Run BaselineAlignment="Bottom" Text="&#x0a;Doctor:" Foreground="White" FontWeight="SemiBold"/>
             <InlineUIContainer BaselineAlignment="Center">
