--- a/MedbayTech.GraphicEditor/View/PopupPatientRoom.xaml
+++ b/MedbayTech.GraphicEditor/View/PopupPatientRoom.xaml
@@ -38,9 +38,9 @@
                    Panel.ZIndex="1"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center" Height="65" Width="175">
-            <Run BaselineAlignment="Bottom" Text="Patient room label:" Foreground="White" FontWeight="DemiBold"/>
+            <Run BaselineAlignment="Bottom" Text="Room label:" Foreground="White" FontWeight="DemiBold"/>
             <InlineUIContainer BaselineAlignment="Bottom">
-                <TextBox Name="textBoxRoomLabel" Height="18" TextWrapping="Wrap" Text="{Binding Path=RoomLabel}" Width="48" TextAlignment="Center" FontSize="11" FontWeight="DemiBold"/>
+                <TextBox Name="textBoxRoomLabel" Height="18" TextWrapping="Wrap" Text="{Binding Path=RoomLabel}" Width="99" TextAlignment="Center" FontSize="11" FontWeight="DemiBold"/>
             </InlineUIContainer>
             <Run BaselineAlignment="Bottom" Text="&#x0a;Beds capacity:" Foreground="White" FontWeight="SemiBold"/>
             <InlineUIContainer BaselineAlignment="Center">
